prevent inline code from wrapping

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -22,3 +22,7 @@
 .post-content h1, .post-content h2, .post-content h3 {
   margin-top: 0px;
 }
+
+code {
+  white-space: pre;
+}
